--- a/resources/templates/main.j2
+++ b/resources/templates/main.j2
@@ -1,7 +1,10 @@
 <html lang="en" data-bs-theme="dark">
 <head>
     {%- block head -%}
-    <link rel="shortcut icon" href="{{ url_for('get_favicon') }}">
+    <link rel="shortcut icon" type="image/svg+xml" href="data:image/svg+xml;utf8,
+        <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'>
+            <text y='.9em' font-size='90'>{{ site_emoji }}</text>
+        </svg>" />
     <title>{% block title %}{{ site_title }}{% endblock title %}</title>
     <link rel="stylesheet" href="{{ url_for('static', path='/style.css') }}">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
