--- a/resources/templates/main.j2
+++ b/resources/templates/main.j2
@@ -23,13 +23,13 @@
         to <span class="green bold">{% if request_info.server_info.whois_url %}<a href="{{ request_info.server_info.whois_url }}">{% endif %}{{ request_info.server_info.ip }}</span>{% if request_info.server_info.whois_url %}</a>{% endif %} port <span class="yellow bold">{{ request_info.server_info.port }}</span> ({{ request_info.server_info.hostname }})</br>
         <h1>Headers</h1>
         {% for header, value in request_info.http_info.headers.items() %}
-        <b>{{ header | e }}</b>: {{ value | e }}<br/>
+        <span class="bold">{{ header | e }}:</span> <span class="grey">{{ value | e }}</span><br/>
         {% endfor %}
-        {% if request_info.http_info.body %}
         <h1>Content</h1>
+        {% if request_info.http_info.body %}
         {{ request_info.http_info.body | e }}
         {% else %}
-        <h1>No content</h1>
+        <span class="italic">No content</span>
         {% endif %}
     </div>
     {% endblock body -%}
