add initial footer

--- a/resources/templates/main.j2
+++ b/resources/templates/main.j2
@@ -31,6 +31,9 @@
         {% else %}
         <span class="italic">No content</span>
         {% endif %}
+        <footer>    
+            Powered by net-test
+        </footer>
     </div>
     {% endblock body -%}
 </body>
