cool footer (tm)

--- a/resources/templates/main.j2
+++ b/resources/templates/main.j2
@@ -49,7 +49,7 @@
             {% endif %}
         </details>
         <footer>    
-            Powered by <a href="https://github.com/das-kaesebrot/net-echo" target="_blank">net-echo</a>
+            Powered by <a href="https://github.com/das-kaesebrot/net-echo" target="_blank">net-echo</a> | API docs: <a href="docs">Swagger UI</a>/<a href="redoc">ReDoc</a>/<a href="openapi.json">openapi.json</a>
         </footer>
     </div>
     {% endblock body -%}
